k8s/pipeline-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline
  labels:
    app: pipeline
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: pipeline
